--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3462,10 +3462,6 @@ html {
   max-width: 36rem;
 }
 
-.max-w-xs {
-  max-width: 20rem;
-}
-
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -3708,6 +3704,10 @@ html {
   border-style: none;
 }
 
+.border-base-content\/10 {
+  border-color: hsl(var(--bc) / 0.1);
+}
+
 .border-base-content\/20 {
   border-color: hsl(var(--bc) / 0.2);
 }
@@ -3725,6 +3725,10 @@ html {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-base-content\/50 {
+  border-color: hsl(var(--bc) / 0.5);
 }
 
 .bg-base-100 {
@@ -4018,6 +4022,11 @@ html {
   line-height: 1.375;
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .text-primary {
   --tw-text-opacity: 1;
   color: hsl(var(--p) / var(--tw-text-opacity));
@@ -4026,16 +4035,6 @@ html {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-neutral-focus {
-  --tw-text-opacity: 1;
-  color: hsl(var(--nf) / var(--tw-text-opacity));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
