--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3413,12 +3413,12 @@ html {
   width: 3rem;
 }
 
-.w-16 {
-  width: 4rem;
+.w-128 {
+  width: 32rem;
 }
 
-.w-160 {
-  width: 40rem;
+.w-16 {
+  width: 4rem;
 }
 
 .w-2 {
@@ -3516,10 +3516,6 @@ html {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-128 {
-  width: 32rem;
 }
 
 .min-w-6 {
@@ -4105,6 +4101,11 @@ html {
   line-height: 1;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -4389,20 +4390,12 @@ textarea::-webkit-scrollbar {
     display: none;
   }
 
-  .\32xl\:w-1\/3 {
-    width: 33.333333%;
+  .\32xl\:w-1\/4 {
+    width: 25%;
   }
 
   .\32xl\:w-2\/3 {
     width: 66.666667%;
-  }
-
-  .\32xl\:w-1\/2 {
-    width: 50%;
-  }
-
-  .\32xl\:w-1\/4 {
-    width: 25%;
   }
 
   .\32xl\:w-2\/5 {
