--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3432,10 +3432,6 @@ html {
   height: 100vh;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .max-h-12 {
   max-height: 3rem;
 }
@@ -3587,6 +3583,14 @@ html {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .min-w-6 {
@@ -4501,6 +4505,10 @@ textarea::-webkit-scrollbar {
 
   .\32xl\:w-2\/5 {
     width: 40%;
+  }
+
+  .\32xl\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .\32xl\:grid-cols-4 {
