--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3787,10 +3787,6 @@ html {
   align-self: center;
 }
 
-.justify-self-center {
-  justify-self: center;
-}
-
 .overflow-auto {
   overflow: auto;
 }
@@ -4060,6 +4056,10 @@ html {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-1\.5 {
+  padding: 0.375rem;
 }
 
 .p-2 {
@@ -4495,8 +4495,8 @@ textarea::-webkit-scrollbar {
     display: none;
   }
 
-  .\32xl\:w-1\/3 {
-    width: 33.333333%;
+  .\32xl\:w-1\/2 {
+    width: 50%;
   }
 
   .\32xl\:w-1\/4 {
@@ -4509,14 +4509,6 @@ textarea::-webkit-scrollbar {
 
   .\32xl\:w-2\/5 {
     width: 40%;
-  }
-
-  .\32xl\:w-1\/2 {
-    width: 50%;
-  }
-
-  .\32xl\:w-2 {
-    width: 0.5rem;
   }
 
   .\32xl\:grid-cols-4 {
