--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -1244,34 +1244,6 @@ html {
   animation: button-pop var(--animation-btn, 0.25s) ease-out;
 }
 
-.footer {
-  display: grid;
-  width: 100%;
-  grid-auto-flow: row;
-  place-items: start;
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-  row-gap: 2.5rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.footer > * {
-  display: grid;
-  place-items: start;
-  gap: 0.5rem;
-}
-
-@media (min-width: 48rem) {
-  .footer {
-    grid-auto-flow: column;
-  }
-
-  .footer-center {
-    grid-auto-flow: row dense;
-  }
-}
-
 .label {
   display: flex;
   -webkit-user-select: none;
@@ -3244,6 +3216,10 @@ html {
   right: 0px;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -3300,10 +3276,6 @@ html {
 
 .mb-1 {
   margin-bottom: 0.25rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .mt-1 {
@@ -3431,6 +3403,10 @@ html {
   max-height: 3rem;
 }
 
+.max-h-124 {
+  max-height: 31rem;
+}
+
 .max-h-160 {
   max-height: 40rem;
 }
@@ -3445,10 +3421,6 @@ html {
 
 .max-h-full {
   max-height: 100%;
-}
-
-.max-h-124 {
-  max-height: 31rem;
 }
 
 .min-h-0 {
@@ -3596,6 +3568,10 @@ html {
   width: 100vw;
 }
 
+.w-96 {
+  width: 24rem;
+}
+
 .min-w-6 {
   min-width: 1.5rem;
 }
@@ -3632,12 +3608,21 @@ html {
   flex-grow: 1;
 }
 
+.origin-bottom {
+  transform-origin: bottom;
+}
+
 .origin-bottom-left {
   transform-origin: bottom left;
 }
 
 .origin-top-right {
   transform-origin: top right;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-180 {
@@ -3684,10 +3669,6 @@ html {
   grid-auto-flow: column;
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -3698,10 +3679,6 @@ html {
 
 .flex-col {
   flex-direction: column;
-}
-
-.place-items-center {
-  place-items: center;
 }
 
 .content-center {
@@ -3736,10 +3713,6 @@ html {
   justify-content: space-between;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
 .justify-stretch {
   justify-content: stretch;
 }
@@ -3766,12 +3739,6 @@ html {
 
 .gap-5 {
   gap: 1.25rem;
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .divide-x > :not([hidden]) ~ :not([hidden]) {
@@ -3961,11 +3928,6 @@ html {
 .bg-error {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--er) / var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .bg-green-500 {
@@ -4492,12 +4454,6 @@ textarea::-webkit-scrollbar {
   .max-2xl\:bg-base-300 {
     --tw-bg-opacity: 1;
     background-color: hsl(var(--b3) / var(--tw-bg-opacity));
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
